--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
-    "@prisma/client": "^5.9.1",
+    "@nestjs/typeorm": "^10.0.2",
+    "@prisma/client": "^5.10.2",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
