--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.0.3",
+    "express": "^4.18.3",
+    "multer": "^1.4.5-lts.1",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -44,6 +46,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.11.19",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
