Agregue algunas funcionalidades y dependencias que eran necesarias para el cloudinary, aún no funciona.

--- a/.env
+++ b/.env
@@ -8,3 +8,9 @@
 DATABASE_URL="postgresql://postgres:c21A3FeFcbB2f*G5B4e6gB4cAF6C4fGc@roundhouse.proxy.rlwy.net:29608/railway"
 
 POORT= 3000
+
+# configuración conexión con cloudinary
+CLOUDINARY_NAME = dcldzjq9s
+CLODINARY_API_KEY = 666286384159972
+CLOUDINARY_API_SECRET = OnWUYfiE19ftq9_GNCFn_tM5gmU
+
