--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "streamifier": "^0.1.1",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
