--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.9.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
+    "buffer-to-stream": "^1.0.0",
+    "cloudinary": "^2.1.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
