CONFIG MODULE ADD

--- a/.env
+++ b/.env
@@ -8,3 +8,9 @@
 DATABASE_URL="postgresql://postgres:c21A3FeFcbB2f*G5B4e6gB4cAF6C4fGc@roundhouse.proxy.rlwy.net:29608/railway"
 
 POORT= 3000
+
+CLOUDINARY_CLOUD_NAME=df9cpjyaf
+CLOUDINARY_API_KEY=your_new_api_key
+CLOUDINARY_API_SECRET=your_new_api_secret
+
+      
