--- a/.env
+++ b/.env
@@ -13,6 +13,5 @@ CLOUDINARY_CLOUD_NAME=df9cpjyaf
 CLOUDINARY_API_KEY=538446387268838
 CLOUDINARY_API_SECRET=UCrCYPHjldGwQkVIUM7UJ0gxew0
 
-GOOGLE_MAIL_APP_EMAIL="yourgmailhere@gmail.com"
-GOOGLE_MAIL_APP_PASSWORD="your_email_app_password"
-      
+GOOGLE_MAIL_APP_EMAIL="abimael.santa1@gmail.com"
+GOOGLE_MAIL_APP_PASSWORD="boln wjwi rxrh cshu"
